--- a/frontend/html&css/lab3/FinalTaskCss/index.html
+++ b/frontend/html&css/lab3/FinalTaskCss/index.html
@@ -156,7 +156,12 @@
 
             <div class="footer-container">
                 <div class="footer-map">
-                    <img src="images/footer.jpg" alt="Map" />
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3452.8052414875015!2d31.023645824937695!3d30.071116617307425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14585b979b7d1dd9%3A0x88f29d027c44f959!2z2YXYudmH2K8g2KrZg9mG2YjZhNmI2KzZitinINin2YTZhdi52YTZiNmF2KfYqg!5e0!3m2!1sar!2seg!4v1752115066999!5m2!1sar!2seg" 
+                        width="600" height="400" s
+                        tyle="border:0;" allowfullscreen="true" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
 
                 <div class="footer-top-row">
